--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "express": "^4.13.4",
+    "flux": "^2.1.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0"
