--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js --harmony"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "json-loader": "^0.5.4",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
@@ -32,6 +33,7 @@
     "flux": "^2.1.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-engine": "^3.2.2",
     "react-router": "^2.3.0"
   }
 }
